# rust-projects

./: README.md
grrs/: Cargo.toml  README.md
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
