[package]
name = "grrs"
version = "0.1.0"
authors = ["Marcos Dias"]
license = "MIT"
description = "A tool to search in files"
readme = "README.md"
keywords = ["search", "grep", "files", "cli"]
categories = ["command-line-utilities"]
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
assert_fs = "1.1"